# checkQt

./: .gitignore  CMakeLists.txt  README.md  create_installer.bat  icon_config.rc  res_config.qrc
include/: mainwindow.h  ui.h
installer/config/: config.xml  style.qss
src/: mainwindow.cpp  ui.cpp
